--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <h2 id="head" class="py-5">Let's Connect!</h2>
             <div class="pb-4">
                 <p class="text">If you're as passionate about coding, anime, video games, or hitting the gym<br>  as I am, I'd love to hear from you! Drop me a line and let's geek out together.</p>
-                <a href="mailto:ziadgamal497@gmail.com" target="_blank"><button type="button" class="my-5" id="connect">Connect</button></a>
+                <a href="mailto:ziadgamal497@gmail.com"><button type="button" class="my-5" id="connect">Connect</button></a>
             </div>
         </div>
     </div>
